# minimal_chronoepilogi

./: .gitignore  404.html  LICENSE  NOTICE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
api/association/: index.html
api/chronoepilogi/: index.html
api/forecasting_models/: index.html
api/partial_correlation/: index.html
docs/: index.md
docs/api/: association.md  chronoepilogi.md  forecasting_models.md  partial_correlation.md
docs/user-guide/: data_and_tasks.md  overview.md
src/chronoepilogi/: __init__.py  associations.py  chronoepilogi.py  exemple.ipynb  models.py  util_mass_ts.py
tests/: test_associations.py  test_chronoepilogi.py  test_import.py  test_mass.py  test_partial.py
user-guide/data_and_tasks/: index.html
user-guide/overview/: index.html
